[package]
name = "resx_derives"
version = "0.1.0"
authors = ["Nick Cardin <nick@cardin.email>"]
license = "MIT OR Apache-2.0"
description = "Derive macros for Resx."

[lib]
proc-macro = true

[dependencies]
syn = "0.11"
quote = "0.3"


[dev-dependencies]
resx = { version = "0.1.0", path = "../resx" }